<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Carpenter\'s Choice</string>
    <string name="welcome_tagline">Make it easy to access the right tool for your project</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back_login">Welcome Back! Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_account_sign_up">Don\'t have an account? Sign Up here</string>
    <string name="create_account_title">Create your Carpenter\'s\nChoice Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name_display">%1$s %2$s</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account_log_in">Already have an account? Log in here</string>
    <string name="discount">"More discount for you!!!"</string>
    <string name="discover">"Discover</string>
    <string name="title_home">"Home"</string>
    <string name="title_basket">"Basket"</string>
    <string name="title_chat">"Chat"</string>
    <string name="title_profile">"Profile"</string>
    <string name="account_title">Account</string>
    <string name="menu_icon_description">Menu Icon</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="name">Lebrown James</string>
    <string name="email">blackmamba@gmail.com</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="my_orders_title">My Orders</string>
    <string name="processing_text">Processing</string>
    <string name="to_ship_text">To Ship</string>
    <string name="to_receive_text">To Receive</string>
    <string name="services_title">Services</string>
    <string name="start_selling_text">Start Selling</string>
    <string name="email_us_text">Email Us</string>
    <string name="about_us_text">About Us</string>
    <string name="processing_icon_description">Processing Icon</string>
    <string name="to_ship_icon_description">To Ship Icon</string>
    <string name="to_receive_icon_description">To Receive Icon</string>
    <string name="start_selling_icon_description">Start Selling Icon</string>
    <string name="email_us_icon_description">Email Us Icon</string>
    <string name="about_us_icon_description">About Us Icon</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="processing_orders_title">Processing Orders</string>
    <string name="to_ship_orders_title">To Ship Orders</string>
    <string name="to_receive_orders_title">To Receive Orders</string>
    <string name="start_selling_title">Start Selling</string>
    <string name="email_us_title">Email Us</string>
    <string name="about_us_title">About Us</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="address_hint">Address</string>
    <string name="contact_number_hint">Contact Number</string>
    <string name="full_name_hint">Full Name</string>
    <string name="save_button_text">Save</string>
    <string name="profile_saved_message">Profile Saved!</string>
    <string name="product_name_hint">Product Name</string>
    <string name="product_description_hint">Product Description</string>
    <string name="payment_method_value">Cash on Delivery</string>
    <string name="product_price_hint">Price</string>
    <string name="sale_type_label">Sale Type</string>
    <string name="rent_radio_button_text">Rent</string>
    <string name="both_radio_button_text">Both</string>
    <string name="sell_radio_button_text">Sell</string>
    <string name="list_product_button_text">List Product</string>
    <string name="product_image_label">Product Image</string>
    <string name="upload_image_button_text">Upload Image</string>
    <string name="product_category_placeholder">CAT HARDWARE</string>
    <string name="product_name_placeholder">SAM HCS Claw Hammer with Steel Handle, 730g</string>
    <string name="product_price_placeholder">₱2,817.95</string>
    <string name="product_old_price_placeholder">₱3,000</string>
    <string name="product_description_placeholder">The SAM Hammer nail puller conforms to standard ISO 15601. Finely polished and chamfered carbon steel head with purlin curve.</string>
    <string name="rent_button_text">Rent</string>
    <string name="buy_button_text">Buy</string>
    <string name="rent_price_label_text">₱500/week</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">₱ 0.00</string>
    <string name="page_title">Product</string>
    <string name="back_button_description">Back</string>
    <string name="product_brand_name">CAT Hardware</string>
    <string name="product_name_value">SAM HCS Claw Hammer with Steel Handle, 730g</string>
    <string name="product_price_value">₱2,817.95</string>
    <string name="product_rating_count_value">4.5K</string>
    <string name="quantity_label">Quantity</string>
    <string name="buy_checkout_text">Buy - Checkout</string>
    <string name="todo">TODO</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="checkout_title">Checkout</string>
    <string name="billing_details_title">Billing Details &amp; Address</string>
    <string name="billing_name">Sophia Rose</string>
    <string name="billing_email">sophiarose@gmail.com</string>
    <string name="billing_address">6000 Gov. M. Cuenco Ave, Cebu City, 6000 Cebu</string>
    <string name="items_title">Item/s</string>
    <string name="item_name">SAM HCS Claw Hammer with Steel Hand...</string>
    <string name="item_quantity">QTY: 1, For Purchase</string>
    <string name="edit_order">Edit Order</string>
    <string name="item_price">₱2,817.95</string>
    <string name="payment_method_title">Payment Method</string>
    <string name="payment_method">Cash on Delivery</string>
    <string name="payment_details_title">Payment Details</string>
    <string name="product_subtotal_title">Product Subtotal</string>
    <string name="product_subtotal_value">₱2,817.95</string>
    <string name="delivery_fee_title">Delivery Fee Subtotal</string>
    <string name="delivery_fee_value">₱150.00</string>
    <string name="discount_title">Discount</string>
    <string name="discount_value">₱0.00</string>
    <string name="total_payment_title">Total Payment</string>
    <string name="total_payment_value">₱2,967.95</string>
    <string name="place_order_button_text">Place Order</string>
    <string name="transaction_details_title">Transaction Details</string>
    <string name="item_name_value">SAM HCS Claw Hammer with Steel Hand...</string>
    <string name="item_quantity_value">QTY: 1, Rent April 11 - April 17</string>
    <string name="item_price_value">₱500.00</string>
    <string name="shipping_progress_title">Shipping Progress</string>
    <string name="processing">Processing</string>
    <string name="to_ship">To Ship</string>
    <string name="to_receive">To Receive</string>
    <string name="quantity">1</string>

    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>
    <dimen name="margin_medium">16dp</dimen>
    <dimen name="margin_small">8dp</dimen>
    <dimen name="margin_large">24dp</dimen>
    <dimen name="margin_tiny">4dp</dimen>
    <dimen name="text_size_title">20sp</dimen>
    <dimen name="text_size_large">18sp</dimen>
    <dimen name="text_size_medium">16sp</dimen>
    <dimen name="text_size_small">12sp</dimen>
</resources>