<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="16dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/lebron" android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:outlineProvider="background"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/profile_image_description"
        tools:targetApi="31" />

    <EditText
        android:id="@+id/edit_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/full_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/address_hint"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/contact_number_hint"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:background="@drawable/rounded_button_yellow"
        android:layout_gravity="center"
        android:textColor="@android:color/black"/>

</LinearLayout>
