<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".activities.CheckoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="26dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:contentDescription="@string/back_button_description"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout_title"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_medium"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/billing_details_title"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_small"/>

                <TextView
                    android:id="@+id/billing_name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/billing_name"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/margin_tiny"/>

                <TextView
                    android:id="@+id/billing_email_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/billing_email"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/margin_tiny"/>

                <TextView
                    android:id="@+id/billing_address_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/billing_address"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="#000000"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_large">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/items_title"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:id="@+id/item_imageview"
                        android:layout_width="116dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:src="@drawable/ic_hammer"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/item_name_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item_name"
                            android:textSize="@dimen/text_size_medium"
                            android:textColor="#000000"
                            android:layout_marginBottom="@dimen/margin_tiny" />

                        <TextView
                            android:id="@+id/item_quantity_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_tiny"
                            android:text="@string/item_quantity"
                            android:textColor="#757575"
                            android:textSize="@dimen/text_size_small" />

                        <TextView
                            android:id="@+id/edit_order_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_order"
                            android:textSize="@dimen/text_size_small"
                            android:textColor="#0000FF"
                            />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/item_price_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_price"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="#000000"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_large">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method_title"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_small"/>

                <TextView
                    android:id="@+id/payment_method_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="#000000"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_large">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_details_title"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_subtotal_title"
                        android:textColor="#757575"
                        android:textSize="@dimen/text_size_medium" />
                    <TextView
                        android:id="@+id/product_subtotal_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_subtotal_value"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="#000000"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_fee_title"
                        android:textColor="#757575"
                        android:textSize="@dimen/text_size_medium" />
                    <TextView
                        android:id="@+id/delivery_fee_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_fee_value"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="#000000"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discount_title"
                        android:textColor="#757575"
                        android:textSize="@dimen/text_size_medium" />
                    <TextView
                        android:id="@+id/discount_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discount_value"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="#000000"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_payment_title"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/total_payment_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_payment_value"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/place_order_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/rounded_button_yellow"
                android:backgroundTint="@color/yellow"
                android:text="@string/place_order_button_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
